--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
